# custom_allocator

./: .travis.yml  CMakeLists.txt  README.md  gtests.cpp  main.cpp
headers/: Custom_allocator.h  Custom_allocator_.h  extensible_realoc_strategy.h  extensible_simple_strategy.h  list_struct.h  simple_strategy.h  timer.h
